--- a/catalog.html
+++ b/catalog.html
@@ -5,65 +5,173 @@
     <title>HTML Academy: Барбершоп</title>
   </head>
   <body>
-    <header class="main-header">
-        <nav class="main-navigation">
-            <a class="logo" href="index.html">
-                <img src="#" width="" height="" alt="Логотип барбершопа Бородинский">
-            </a>
-            <ul class="site-navigation">
-                <li><a href="#">Информация</a></li>
-                <li><a href="#">Новости</a></li>
-                <li><a href="#">Прайс-лист</a></li>
-                <li class="site-navigation-current"><a href="#">Магазин</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
-            <ul class="user-navigation">
-                <li class="login-link"><a href="#">Вход</a></li>
-            </ul>
-        </nav>
+    <header class="site-header">
+      <nav class="site-navigation">
+        <a class="site-logo" href="index.html">
+          <img src="#" width="368" height="153" alt="Логотип барбершопа Бородинский"> <!--Указать путь и уточнить размеры-->
+        </a>
+        <ul class="main-navigation">
+          <li><a href="#">Информация</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Прайс-лист</a></li>
+          <li class="main-navigation-item"><a>Магазин</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+        <ul class="user-navigation">
+          <li class="login-link"><a>Вход</a></li>
+        </ul>
+      </nav>
     </header>
-    <main>
-        <h1 class="page-title">Средства для ухода</h1>
-        <ul class="breadcrumbs">
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="#">Магазин</a></li>
-            <li class="breadcrumbs-current">Средства для ухода></li>
+    <main class="container">
+      <h1>Средства для ухода</h1>
+      <ul class="breadcrumbs">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="#">Магазин</a></li>
+        <li class="breadcrumb-item">Средства для ухода</li>
+      </ul>  
+      <section class="filtres">
+        <h2 class="visually-hidden">Фильтр товаров</h2>
+        <!--Здесь будет форма-->
+      </section>
+      <section class="catalog">
+        <h2 class="visually-hidden">Каталог товаров средств для ухода</h2>
+        <ul class="catalog-list">
+          <li class="catalog-item">
+            <h3>
+              <a href="#">
+                <span class="catalog-category">Набор для путешествий</span>
+                <span class="catalog-item-title">«Baxter of California»</span>
+              </a>
+            </h3>
+            <p class="catalog-item-image">
+              <a href="#">
+                <img src="#" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
+              </a>
+            </p>
+            <p class="catalog-item-prise">
+              <b>2 900 Р</b>
+              <a class="buttom" href="#">Купить</a>
+            </p>
+          </li>
+          <li class="catalog-item">
+            <h3>
+              <a href="#">
+                <span class="catalog-category">Увлажняющий кондиционер</span>
+                <span class="catalog-item-title">«Baxter of California»</span>
+              </a>
+            </h3>
+            <p class="catalog-item-image">
+              <a href="#">
+                <img src="#" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
+              </a>
+            </p>
+            <p class="catalog-item-prise">
+              <b>750 Р</b>
+              <a class="buttom" href="#">Купить</a>
+            </p>
+          </li>
+          <li class="catalog-item">
+            <h3>
+              <a href="#">
+                <span class="catalog-category">Гель для волос</span>
+                <span class="catalog-item-title">«Suavecito»</span>
+              </a>
+            </h3>
+            <p class="catalog-item-image">
+              <a href="#">
+                <img src="#" width="220" height="165" alt="Гель для волос «Suavecito»">
+              </a>
+            </p>
+            <p class="catalog-item-prise">
+              <b>290 Р</b>
+              <a class="buttom" href="#">Купить</a>
+            </p>
+          </li>
+          <li class="catalog-item">
+            <h3>
+              <a href="#">
+                <span class="catalog-category">Глина для укладки волос</span>
+                <span class="catalog-item-title">«American crew»</span>
+              </a>
+            </h3>
+            <p class="catalog-item-image">
+              <a href="#">
+                <img src="#" width="220" height="165" alt="Глина для укладки волос «American crew»">
+              </a>
+            </p>
+            <p class="catalog-item-prise">
+              <b>500 Р</b>
+              <a class="buttom" href="#">Купить</a>
+            </p>
+          </li>
+          <li class="catalog-item">
+            <h3>
+              <a href="#">
+                <span class="catalog-category">Гель для волос</span>
+                <span class="catalog-item-title">«American crew»</span>
+              </a>
+            </h3>
+            <p class="catalog-item-image">
+              <a href="#">
+                <img src="#" width="220" height="165" alt="Гель для волос «American crew»">
+              </a>
+            </p>
+            <p class="catalog-item-prise">
+              <b>300 Р</b>
+              <a class="buttom" href="#">Купить</a>
+            </p>
+          </li>
+          <li class="catalog-item">
+            <h3>
+              <a href="#">
+                <span class="catalog-category">Набор для бритья</span>
+                <span class="catalog-item-title">«Baxter of California»</span>
+              </a>
+            </h3>
+            <p class="catalog-item-image">
+              <a href="#">
+                <img src="#" width="220" height="165" alt="Набор для бритья «Baxter of California»">
+              </a>
+            </p>
+            <p class="catalog-item-prise">
+              <b>3 900 Р</b>
+              <a class="buttom" href="#">Купить</a>
+            </p>
+          </li>     
         </ul>
-        <section class="filters">
-            <h2 class="visually-hidden">Фильтры товаров</h2>
-             <!--Здесь будет форма-->
-        </section>
-        <section class="card-product">
-            <img src="#" width="" height="" alt="Набор для путешествий">
-            <h2 class="product">Набор для путешествий</h2>
-            <span>2 900p</span><a href="#">Купить</a>
-        </section>        
-        <ul class="pagination">
-            <li><a href="#"></a>1</li>
-            <li><a></a>2</li>
-            <li><a href="#"></a>3</li>
-            <li><a href="#"></a>4</li>
-        </ul>
+      </section>
+      <ul class="pagination">
+        <li class="pagination-item"><a href="#">1</a></li>
+        <li class="pagination-item pagination-item-current"><a>2</a></li>
+        <li class="pagination-item"><a href="#">3</a></li>
+        <li class="pagination-item"><a href="#">4</a></li>
+      </ul>
     </main>
-    <footer class="main-footer">
-        <p class="footer-contacts">
-            Барбершоп "Бородинский"<br>
-            Адрес: г. Санкт-Петербург, ул. Б. Конюшенная, Д. 19/8<br>
-            <a href="#">Как нас найти?</a><br>
-            Телефон <mail to:+74956660266>+7 (495) 666-02-66</mail>
+    <footer class="site-footer">
+        <p class="contacts-footer">
+          Барбершоп «Бородинский»<br>
+          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+          <a href="#">Как нас найти?</a><br>
+          Телефон: +7 (812) 666-02-66
         </p>
-        <div class="footer-social">
-            <b>Давайте дружить!</b>
-            <ul>
-            <li><a href="">Вконтакте</a></li>
-            <li><a href="">Фейсбук</a></li>
-            <li><a href="">Инстаграм</a></li>
-            </ul>
+        <div class="social-footer">
+          <b>Давайте дружить!</b>
+          <ul class="social-list">
+            <li><a class="social-buttom-vk" href="#">Вконтакте</a></li>
+            <li><a class="social-buttom-fb" href="#">Фейсбук</a></li>
+            <li><a class="social-buttom-ig" href="#">Инстаграм</a></li>
+          </ul>
+        <p class="copyright">
+          <b>Разработано:</b>
+          <a href="htmlacademy.ru">НТМL Academy</a>
+        </p>
         </div>
-        <p class="footer-copyright">
-            <b>Разработано:</b> 
-            <a class="buttom" href="htmlacademy.ru">HTML Academy</a>
-        </p>
-    </footer>
-  </body>
-</html>
+      </footer>
+      <section class="modal modal-login">
+        <h2>Личный кабинет</h2>
+        <p>Введите свой логин и пароль</p>
+        <!--Здесь будет форма входа-->
+        <span class="modal-close">x</span>
+      </section>
+    </body>
+  </html>
