добавлена ссылка на изображение

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="site-header">
       <nav class="site-navigation">
         <a class="site-logo">
-          <img src="#" width="368" height="153" alt="Логотип барбершопа Бородинский">
+          <img src="#" width="368" height="153" alt="Логотип барбершопа Бородинский"> <!--Указать путь-->
         </a>
         <ul class="main-navigation">
           <li><a href="#">Информация</a></li>
